Commit 41 - fixed grammatical errors. Props to Vivan and Yogish

--- a/templates/welcomePage.html
+++ b/templates/welcomePage.html
@@ -4,7 +4,7 @@
         Get your life organized!
  </h1>
  <h2  style="text-align: center; font-size: 30px;">
-    to do something meaningfull in life
+    to do something meaningful in your life
  </h2>      
  <button type="button" class="btn btn-outline-primary btn-lg" style="margin-left: 42%;" onclick="location.href='/signup'">Get started!</button>
 {% endblock %}
